# Agenti_AI

./: .gitignore
agent-discovery-platform/: .env.example  (+2 more)
agent-discovery-platform/backend/: alembic.ini  config.py  main.py  pyproject.toml
agent-discovery-platform/backend/agents/: graph.py  routing.py  state.py
agent-discovery-platform/backend/agents/nodes/: capability_agent.py  evaluation_agent.py  governance_agent.py  intent_agent.py  ranking_agent.py  recommendation_agent.py  search_agent.py
agent-discovery-platform/backend/api/: deps.py
agent-discovery-platform/backend/api/routes/: agents.py  analytics.py  discovery.py  feedback.py  governance.py  graph.py  mcp.py
agent-discovery-platform/backend/db/: database.py  seed.py
agent-discovery-platform/backend/db/migrations/: env.py
agent-discovery-platform/backend/events/: consumer.py  event_schemas.py  producer.py
agent-discovery-platform/backend/graph_db/: graph_queries.py  knowledge_graph.py  neo4j_client.py
agent-discovery-platform/backend/harness/: citation_engine.py  confidence_calibrator.py  continuous_improvement.py  feedback_service.py  guardrails.py  memory_manager.py  response_validator.py
agent-discovery-platform/backend/mcp_servers/: agent_registry_server.py  confluence_server.py  github_server.py  mcp_catalog_server.py
agent-discovery-platform/backend/observability/: langfuse_tracer.py  metrics.py
agent-discovery-platform/backend/search/: embeddings.py  hybrid_search.py  indexer.py  qdrant_store.py  ranking_engine.py
agent-discovery-platform/backend/security/: opa_client.py
(+22 files in other folders)
