[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-discovery-backend"
version = "0.1.0"
description = "FastAPI backend for Enterprise Agent Discovery Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "httpx>=0.28",
    
    # AI / LLM
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langchain-community>=0.3",
    "mcp>=1.0.0",
    
    # Search
    "qdrant-client>=1.12",
    "sentence-transformers>=3.3",
    
    # Data
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "neo4j>=5.25",
    "redis>=5.2",
    
    # Events
    "aiokafka>=0.11",
    
    # Observability
    "langfuse>=2.55",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-instrumentation-fastapi",
    
    # Security
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    
    # Utilities
    "tenacity>=9",
    "rich>=13"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "bandit>=1.7",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
